@@ -1,6 +1,12 @@
 2007-08-23  Hector E. Gomez Morales <hectoregm@gmail.com> 
 
 	* Monodoc.Editor.Gui/Test/TestDocumentBufferArchiver.cs: Need to freeze
+	  addition of undo actions while Deserializing to a buffer.
+	* Monodoc.Editor.Gui/DocumentBuffer.cs: Minor Change.
+
+2007-08-23  Hector E. Gomez Morales <hectoregm@gmail.com> 
+
+	* Monodoc.Editor.Gui/Test/TestDocumentBufferArchiver.cs: Need to freeze
 	  the creation of undo actions when calling Deserialize method.
 	* Monodoc.Editor.Gui/DocumentBuffer.cs: Deleted commented code.
 
